--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -23,5 +23,32 @@ jobs:
       run: yarn format-check
     - name: check for copyright headers
       run: yarn copyright-check
-      env:
+    - name: Generate build number
+      uses: einaregilsson/build-number@v2 
+      with:
+        token: ${{secrets.github_token}}
+    - name: build
+      run: yarn build -- -- --env.version=$BUILD_NUMBER
+    - name: run linter
+      run: yarn lint
+    - name: run unit tests
+      run: |
+          export NODE_OPTIONS=--max_old_space_size=4096
+          yarn test --ci --coverage
+    - name: publish unit test results
+      uses: actions/upload-artifact@v1
+      with:
+            name: unit tests
+            path: test-results/unit/junit.xml
+    - name: publish code coverage
+      uses: actions/upload-artifact@v1
+      with:
+        name: Cobertura
+        path: test-results/unit/coverage/cobertura-coverage.xml
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: dist
+        path: dist
+    - env:
         CI: true
