--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Accessibility Insights Service CI
 
 on: [push]
 
@@ -43,10 +43,10 @@ jobs:
     - name: publish code coverage
       uses: actions/upload-artifact@v1
       with:
-        name: Cobertura
+        name: code-coverage-report
         path: test-results/unit/coverage/cobertura-coverage.xml
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: dist
-        path: dist
+    - name: Create Staging directory
+      run: mkdir -p ../staging
+    - name: Copy Filed to staging
+      run: rsync -a --include 'job-manager/dist/**/*' --include 'web-api-scan-job-manager/dist/**/*' --include 'runner/dist/**/*' --include 'web-api-scan-runner/dist/**/*' --include 'scan-request-sender/dist/**/*' --include 'web-api-scan-request-sender/dist/**/*' --include 'resource-deployment/dist/**/*' --include 'web-api/dist/**/*' --include 'web-workers/dist/**/*'  --exclude '**/node_modules/**/*' --exclude  '**/.vscode/**/*' --exclude '**/*.md' packages/ ../staging
+        
