--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -51,7 +51,7 @@ jobs:
     - name: upload production artifacts
       uses: actions/upload-artifact@v1
       with:
-        name: prod artifacts
+        name: build-artifacts
         path: ../staging
 
   canary-deployment:
@@ -67,4 +67,8 @@ jobs:
       - name: Download math result for job 1
         uses: actions/download-artifact@v1
         with:
-          name: prod artifacts
+          name: build-artifacts
+      - run: echo  ${{ GITHUB_WORKSPACE }}
+      - run: /bin/bash ${{ GITHUB_WORKSPACE }}/build-artifacts/resource-deployment/dist/scripts/install-parallel.sh  -r "${{ secrets.resourceGroup }}" -s "${{ secrets.subscriptionId }}" -l "${{ secrets.location }}" -e "${{ secrets.environment }}" -c "${{ secrets.clientId }}" -o "${{ secrets.orgName }}" -p "${{ secrets.publisherEmail }}" -t "${{ secrets.clientSecret }}"
+        
+        
