--- a/.github/workflows/AZLogin.yml
+++ b/.github/workflows/AZLogin.yml
@@ -12,3 +12,4 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - run: az extension add --name azure-devops
